<resources>
    <string name="available_balance_text">Current balance</string>
    <string name="touch_to_change_text">Tap to change</string>
    <string name="txt_total_balance_15_btc_text" translatable="false">15 BTC</string>
    <string name="txt_amount_btc_text" translatable="false">1.4 BTC</string>
    <string name="txt_conference_ticket_text">Conference ticket</string>
    <string name="txt_time_date_text" translatable="false">03 Feb 2014</string>
    <string name="new_user_text">New User</string>
    <string name="add_user_in_your_contact_list_text">Add user to your contact list or\nlook for it in the community section</string>
    <string name="cancel_text">Cancel</string>
    <string name="search_text">Search</string>
    <string name="matias_furszyfer_text" translatable="false">Matias Furszyfer</string>
    <string name="name_text">Name</string>
    <string name="address_text">Address</string>
    <string name="waiting_text">Waiting...</string>
    <string name="share_address_text">Share address</string>
    <string name="request_text">Request</string>
    <string name="send_text">Send</string>
    <string name="txt_title_text">Add Contact Help</string>
    <string name="no_id_In_this_wallet_text">This wallet allows two different types of contacts:</string>
    <string name="no_id_Users_of_other_text_Fermat_wallets">Users of other Fermat wallets: you don\'t need to manually exchange addresses with them</string>
    <string name="no_id_Users_of_other_text_wallets_outside">Users of other wallets outside Fermat: You need to exchange addresses manually</string>
    <string name="no_id_Select_below_which_text">Select below which type of contact you want to add:</string>
    <string name="add_fermat_user_text">Fermat Contact</string>
    <string name="add_extra_user_text">External Contact</string>
    <string name="create_external_contact_text">Create External Contact</string>
    <string name="set_name_text">Enter name</string>
    <string name="set_address_text">Enter address</string>
    <string name="save_text">Save</string>
    <string name="contact_created_msg">Contact Created</string>
    <string name="contact_failed_msg">Please try again later</string>
    <string name="fermat_network_offline_text">Fermat Network Offline</string>
    <string name="description_text">You are not connected to the fermat network.</string>
    <string name="second_description_text">the fermat network.</string>
    <string name="connect_text">Connect</string>
    <string name="txt_balance_amount_29_text" translatable="false">0.00</string>
    <string name="balance_amount_type_text" translatable="false">btc</string>
    <string name="click_me_to_search_text">Tap me\nto look for contacts</string>
    <string name="receive_text">Receive</string>
    <string name="give_me_an_address_address_text">Give me an Address!</string>
    <string name="you_dont_have_transactions_received_text">You don\'t have\n any received transactions</string>
    <string name="you_dont_have_transactions_sent_text">You don\'t have\n any transaction sent</string>
    <string name="balance_amount_0_bits_text" translatable="false">0 bits</string>
    <string name="notes_text">Notes</string>
    <string name="no_history_send_or_receive">No history</string>
    <string name="header_text">Header</string>
    <string name="accepted_text">Accepted</string>
    <string name="deny_text">Deny</string>
    <string name="accept_text">Accept</string>
    <string name="no_transactions_text">No transactions yet</string>
    <string name="reason_text">Reason</string>
    <string name="you_dont_have_requests_text">You don\'t have\n requests</string>
    <string name="send_request_text">Send Request</string>
    <string name="home_text">Home</string>
    <string name="you_need_an_identity_before_you_can_enter_text">You need an identity before\nyou can enter</string>
    <string name="create_text">Create</string>
    <string name="balance_amount_25_btc_text" translatable="false">25 btc</string>
    <string name="refuse_text">Refuse</string>
    <string name="confirm_text">Your Send</string>
    <string name="welcome_text">Welcome!</string>
    <string name="this_is_a_simple_bitcoin_only_wallet_text">This is a simple bitcoin wallet.\nIt\'s main features are:</string>
    <string name="in_this_wallet_you_can_have_text">In this wallet you can have two different types of contacts:</string>
    <string name="to_begin_choose_an_avatar_below_text">To begin, choose an avatar below. You might change it later with any picture and your own alias.</string>
    <string name="be_john_doe_text">Be John Doe</string>
    <string name="be_jane_doe__text">Be Jane Doe</string>
    <string name="back_text">Back</string>
    <string name="mnrr3141fa124_text" translatable="false">mnrr3141fa124</string>
    <string name="footer_message_text" translatable="false">Footer Message</string>
    <string name="loading_text">Loading..........</string>
    <string name="confirm_request_text">Confirm request</string>
    <string name="enter_name_here_text">Enter name here</string>
    <string name="bits_text" translatable="false">[bits]</string>
    <string name="btc_text" translatable="false">[btc]</string>
    <string name="balance_amount_0_text" translatable="false">0</string>
    <string name="amount_text">Amount</string>
    <string name="fee_amount_text">Fee</string>
    <string name="fee_option_text">Substract Fee from Amount</string>
    <string name="fee_advances_text">Advanced configuration</string>
    <string name="empty_transactions_text">Empty transactions</string>
    <string name="txtLastTransactions_text">Last transactions</string>
    <string name="no_id_pipe_text" translatable="false">|</string>
    <string name="txtSeeAlltransactions_text">See all</string>
    <string name="txtViewTitleTransaction_text" translatable="false">Transaccion hacia Starbuck 480 btc</string>
    <string name="txtViewDetailTransaction_text" translatable="false">Taza de café</string>
    <string name="name_prefix_text" translatable="false">name prefix</string>
    <string name="middle_name_text">middle name</string>
    <string name="last_name_text">last name</string>
    <string name="name_suffix_text" translatable="false">name suffix</string>
    <string name="alias_text">alias suffix</string>
    <string name="type_text">type</string>
    <string name="swype_refresh">Swype down to refresh</string>
    <string name="search_contacts_hint">Search contacts...</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_view_type">View Type</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_disable">Disable / Enable</string>
    <string name="action_edit">Edit</string>
    <string name="action_wallet_store">Wallet Store</string>
    <string name="title_section1" translatable="false">Luis Fernando Molina</string>
    <string name="title_section2">Contacts</string>
    <string name="title_section3">Accounts</string>
    <string name="title_section4">Banks</string>
    <string name="title_section5">Coupons</string>
    <string name="title_section6">Discounts</string>
    <string name="title_section7">Vouchers</string>
    <string name="title_section8">Gift cards</string>
    <string name="title_section9">Clones</string>
    <string name="title_section10">Childs</string>
    <string name="title_section11">Exit</string>
    <string name="title_section12">Personal Wallets</string>
    <string name="title_section13">Shops</string>
    <string name="title_section14">Commercial wallets</string>
    <string name="title_section15">Factory Projects</string>
    <string name="title_section16">Published Wallets</string>
    <string name="title_section17">Shops</string>
    <string name="app_name">Fermat Bitcoin Wallet</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">Young Wallet</string>
    <string name="action_search">Search</string>
    <string name="kid_wallet">Kids</string>
    <string name="young_wallet">Young</string>
    <string name="professional_wallet">Professional</string>
    <string name="bank_wallet">Bank</string>
    <string name="store_wallet">Store</string>
    <string name="corporate_wallet">Corporate</string>
    <string name="trade_crypto_wallet">Traders</string>
    <string name="send_remittance_wallet">Send</string>
    <string name="receive_remittance_wallet">Receive</string>
    <string name="remittance">Remittances</string>
    <string name="wallets">Wallets</string>
    <string name="institutional_wallets">Institutional wallets</string>
    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string name="action_contact">Wallets</string>
    <string name="title_activity_app_desktop" translatable="false">AppDesktop</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_navegation_drawler">Smart Wallets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_blank">Wallet Manager</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="icono1" translatable="false">Carrefour</string>
    <string name="icono2" translatable="false">Banco Itau</string>
    <string name="icono3" translatable="false">Banco Popular</string>
    <string name="icono4" translatable="false">Boca Juniors</string>
    <string name="icono5" translatable="false">Barcelona</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contacts">Contacts Activity</string>
    <string name="title_activity_requests_sent">Requests Sent Activity</string>
    <string name="title_activity_sent_detail">Sent Detail Activity</string>
    <string name="title_activity_account_detail">Account Detail Activity</string>
    <string name="title_activity_store">Store Activity</string>
    <string name="title_activity_refill_point">Refill Point Activity</string>
    <string name="title_activity_daily_discounts">Daily Discounts Activity</string>
    <string name="fragment_send_change_contact"><u>Change Contact</u></string>
    <string name="fragment_send_header_summary">Be sure to properly fill out\nthe information.</string>
    <string name="fragment_send_account_details_summary">Account Details</string>
    <string name="fragment_send_account_name_hint">Name (*)</string>
    <string name="fragment_send_account_number_hint">Address (*)</string>
    <string name="fragment_send_amount_hint">Amount (bits) (*)</string>
    <string name="fragment_send_notes_hint">Notes (optional)</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="delete_title">Delete Contact</string>
    <string name="delete_sub_title">Do you want delete this contact from your wallet?</string>
</resources>