<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48000000"
    android:gravity="center">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:elevation="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#272727"
            android:text="@string/delete_title"/>
        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#6d6e70"
            android:text="@string/delete_sub_title"/>

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#272727"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatButton
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:text="@string/cancel_label"
                android:textColor="#272727"/>
            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatButton
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="#FFF"
                android:text="@string/ok_label"
                android:textColor="#272727"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>