<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbf7ed"
    android:orientation="vertical">

    <TextView
        android:id="@+id/transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_send_header_summary"
        android:textColor="#9b1f2121"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/account_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fragment_send_account_details_summary"
        android:textColor="#000"
        android:textSize="16sp" />

    <ScrollView
        android:layout_below="@+id/account_details_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UnusedAttribute">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/account_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_send_account_name_hint"
                    android:layout_gravity="start"
                    android:textColor="#9b1f2121"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/change_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_send_change_contact"
                    android:layout_gravity="end"
                    android:textColor="#ff08cbc6"
                    android:textSize="14sp" />

            </LinearLayout>



            <AutoCompleteTextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_section"
                android:elevation="2dp"
                android:ems="10"
                android:singleLine="true"
                android:ellipsize="end"
                android:nextFocusDown="@+id/address"
                android:enabled="false"
                android:paddingBottom="7dip"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingTop="7dip"
                android:imeOptions="actionNext"
                android:textColor="#72af9c"
                android:textColorHint="#BDBDBD"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/account_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/fragment_send_account_number_hint"
                android:textColor="#9b1f2121"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:background="@drawable/shape_section"
                android:elevation="2dp"
                android:enabled="false"
                android:singleLine="true"
                android:nextFocusDown="@+id/amout"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:imeOptions="actionNext"
                android:paddingBottom="7dip"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingTop="7dip"
                android:textColor="#72af9c"
                android:textColorHint="#BDBDBD"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/fragment_send_amount_hint"
                android:textColor="#9b1f2121"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_section"
                android:elevation="2dp"
                android:gravity="end"
                android:hint="0"
                android:singleLine="true"
                android:nextFocusDown="@+id/notes"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:paddingBottom="7dip"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingTop="7dip"
                android:state_selected="true"
                android:textColor="#72af9c"
                android:textColorHint="#BDBDBD"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:imeOptions="actionSend"
                android:textStyle="normal"
                android:hint="@string/fragment_send_notes_hint"
                android:elevation="2dp"
                android:background="@drawable/shape_section"
                android:textColor="#72af9c"
                android:textColorHint="#BDBDBD"
                android:paddingTop="7dip"
                android:singleLine="true"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingBottom="7dip"
                android:layout_gravity="end"
                android:state_selected = "false"/>

            <ImageView
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_action_send_now_grey"
                android:padding="3dp"/>


        </LinearLayout>


    </ScrollView>
</RelativeLayout>