<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#12aca1">


        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_external_contact_text"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="18sp"
            app:typeface="ROBOTO_REGULAR"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="3dip"
        android:paddingLeft="7dip"
        android:paddingRight="7dip"
        android:paddingTop="6dip"
        android:background="#FFFFFF"
        android:divider="#e1e1e1">

        <ImageView
            android:id="@+id/take_picture_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="7dip"
            android:src="@drawable/ic_camera"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="7dp">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_name_text"
                android:textColor="#12aca1"
                android:paddingLeft="20dp"
                android:layout_alignParentTop="true"
                android:visibility="visible"
                app:typeface="ROBOTO_REGULAR"/>

            <AutoCompleteTextView
                android:id="@+id/contact_name"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dip"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text=""
                android:hint="@string/name_text"
                android:textColorHint="#9a9a9c"
                android:inputType="textCapWords"
                android:paddingBottom="7dip"
                android:paddingLeft="15dip"
                android:paddingRight="7dip"
                android:paddingTop="7dip"
                android:singleLine="true"
                android:textColor="#1d1d26"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:textStyle="normal" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e1e1e1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginTop="7dp"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type address"
        android:textColor="#12aca1"
        android:paddingLeft="24dp"
        android:layout_alignParentTop="true"
        android:paddingTop="7dp"
        app:typeface="ROBOTO_REGULAR"
        />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF"
            android:divider="#e1e1e1"
            android:baselineAligned="false"
            android:id="@+id/container">

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dip"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text=""
                android:hint="@string/address_text"
                android:textColorHint="#9a9a9c"
                android:inputType="textCapWords"
                android:paddingBottom="7dip"
                android:paddingLeft="15dip"
                android:paddingRight="7dip"
                android:paddingTop="7dip"
                android:singleLine="true"
                android:textColor="#1d1d26"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/paste_from_clipboard_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dip"
                android:src="@drawable/copy_icon"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:id="@+id/scan_qr"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dip"
                android:src="@drawable/qr_icon"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e1e1e1"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/linear_create_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#efefef"
            android:text="@string/cancel_text"
            android:textColor="#666666"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/save_contact_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="#1173aa"
            android:text="@string/save_text"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            />
    </LinearLayout>

</LinearLayout>
